--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <section id="s1">
-            <div>
+            <div id="s1-container">
                 <img src="img/logo.png" alt="logo">
                 <h2><span class="text-bold">“O esporte quando não<br> 
                     forma um campeão,<br> 
@@ -21,6 +21,9 @@
                     você também.
                 </h2>
                 <button class="primary-btn">FALE COMIGO <span class="material-symbols-outlined">south_east</span></button>
+            </div>
+            <div id="s1-botton">
+                <img src="img/component01.png" alt="component01-mobile">
             </div>
         </section>
         <section id="s2">
