--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section id="s2">
                 <div id="s2-container">
                     <div>
-                        <img src="img/img03.png" alt="">
+                        <img src="img/img03.png" alt="" id="s2-img">
                     </div>
                     <div>
                         <p>
