--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/global.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <main>
@@ -56,6 +57,27 @@
                         para poder performar.
                     </p>
                 </div>
+            </div>
+        </section>
+        <div id="s2-s3">
+            <p>
+                Hoje posso afirmar que esse lugar que você deseja estar,<br>
+                <span class="text-bold">eu conheço na prática e na teoria. Eu já estive aí!</span>
+            </p>
+        </div>
+        <section id="s3">
+            <div id="s3-container">
+                <div id="s3-title">
+                    <img src="img/component02.png" alt="">
+                </div>
+                <div id="s3-carroucel">
+                    <div id="carrousel-container">
+                        <img src="img/carousel01.png" alt="carrosel1">
+                        <img src="img/carousel02.png" alt="carrosel2">
+                        <img src="img/carousel03.png" alt="carrosel3">
+                    </div>
+                </div>
+                <div id="s3-text"></div>
             </div>
         </section>
     </main>
