--- a/index.html
+++ b/index.html
@@ -72,12 +72,16 @@
                 </div>
                 <div id="s3-carroucel">
                     <div id="carrousel-container">
-                        <img src="img/carousel01.png" alt="carrosel1">
-                        <img src="img/carousel02.png" alt="carrosel2">
-                        <img src="img/carousel03.png" alt="carrosel3">
+                        <img src="img/carousel01.png" alt="carrosel1" class="slide-img">
+                        <img src="img/carousel02.png" alt="carrosel2" class="slide-img">
+                        <img src="img/carousel03.png" alt="carrosel3" class="slide-img">
                     </div>
                 </div>
-                <div id="s3-text"></div>
+                <div id="s3-text">
+                    <p>
+                        
+                    </p>
+                </div>
             </div>
         </section>
     </main>
