--- a/index.html
+++ b/index.html
@@ -79,7 +79,14 @@
                 </div>
                 <div id="s3-text">
                     <p>
-                        
+                        <span class="text-bold">Nas fotos acima mostro um pouco da minha história em cima da bike.<br></span>
+                        Ao longo da carreira fui escalando categoria por categoria <span class="text-bold">até<br> chegar no ponto máximo</span> do nosso esporte algumas vezes,<br>
+                        estando em todos os pódios possíveis na categoria ELITE e também<br>
+                        na categoria GERAL.
+                        <br>
+                        <span class="text-bold">Já estive aí onde você quer chegar,</span> é simples, complexo, requer<br> dedicação e tempo, além de MUITA, MAS MUITA fome de conseguir conquistar.<br>
+                        É sobre isso. O pódio não escolhe quem sobe nele, mas sobe quem o faz por merecer.<br>
+                        Pódio é MERECIMENTO e eu vou te fazer MERECER tua vaga no pódio.
                     </p>
                 </div>
             </div>
