--- a/index.html
+++ b/index.html
@@ -72,9 +72,12 @@
                 </div>
                 <div id="s3-carroucel">
                     <div id="carrousel-container">
-                        <img src="img/carousel01.png" alt="carrosel1" class="slide-img">
-                        <img src="img/carousel02.png" alt="carrosel2" class="slide-img">
-                        <img src="img/carousel03.png" alt="carrosel3" class="slide-img">
+                        <img src="img/Carrousel01.png" alt="carrosel1" class="slide-img">
+                        <img src="img/Carrousel02.png" alt="carrosel2" class="slide-img">
+                        <img src="img/Carrousel03.png" alt="carrosel3" class="slide-img">
+                        <img src="img/Carrousel04.png" alt="carrosel4" class="slide-img">
+                        <img src="img/Carrousel05.png" alt="carrosel5" class="slide-img">
+                        <img src="img/Carrousel06.png" alt="carrosel6" class="slide-img">
                     </div>
                 </div>
                 <div id="s3-text">
