--- a/index.html
+++ b/index.html
@@ -120,6 +120,44 @@
                 </div>
             </div>
         </section>
+        <section id="s6">
+            <img src="./img/planos_txt.png" alt="planos">
+            <div id="tabela-de-planos">
+                <div class="plano">
+                    <div class="planos-textos">
+                        <p class="text-bold bronze">Plano Bronze</p>
+                        <p class="text-bold">R$ 150,00</p>
+                        <p class="text-min">Mensais</p>
+                    </div>
+                    <div class="divider"></div>
+                    <button><p class="text-bold">Saiba Mais</p></button>
+                </div>
+                <div class="plano">
+                    <div class="planos-textos">
+                        <p class="text-bold prata">Plano Prata</p>
+                        <p class="text-bold">R$ 150,00</p>
+                        <p class="text-min">Mensais</p>
+                    </div>
+                    <div class="divider"></div>
+                    <button><p class="text-bold">Saiba Mais</p></button>
+                </div>
+                <div class="plano">
+                    <div class="planos-textos">
+                        <p class="text-bold ouro">Plano Ouro</p>
+                        <p class="text-bold">R$ 150,00</p>
+                        <p class="text-min">Mensais</p>
+                    </div>
+                    <div class="divider"></div>
+                    <button><p class="text-bold">Saiba Mais</p></button>
+                </div>
+            </div>
+            <div id="confirmação-planos">
+                <button class="primary-btn">FALE COMIGO <span class="material-symbols-outlined">south_east</span></button>
+                <div id="plano-info">
+
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
