--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
             <div id="confirmação-planos">
                 <button class="primary-btn">FALE COMIGO <span class="material-symbols-outlined">south_east</span></button>
                 <div id="plano-info">
-
+                    <p id="web-info-bronze">
+                        Planilha de treino através do aplicativo TREINUS<br>Feedback e dúvidas via whatsapp<br>Ideal para quem utiliza frequência cardíaca.<br>Grupo Exclusivo com todos os alunos.
+                    </p>
                 </div>
             </div>
 
