--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <button class="primary-btn" onclick="openWhatsApp('Ola gostaria de mais informações sobre seu trabalho.')">FALE COMIGO <span class="material-symbols-outlined">south_east</span></button>
                 <div id="plano-info">
                     <p class="resizableText bronze-text" >
-                        Planilha de treino através do aplicativo TREINUS<br>Feedback e dúvidas via whatsapp<br>Ideal para quem utiliza frequência cardíaca.<br>Grupo Exclusivo com todos os alunos.
+                        Planilha de treino através do aplicativo TREINUS Feedback e dúvidas via whatsapp Ideal para quem utiliza frequência cardíaca. Grupo Exclusivo com todos os alunos.
                     </p>
 
                     <p class="resizableText prata-text hide">
