--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="plano">
                     <div class="planos-textos">
                         <p class="text-bold prata">Plano Prata</p>
-                        <p class="text-bold">R$ 150,00</p>
+                        <p class="text-bold">R$ 220,00</p>
                         <p class="text-min">Mensais</p>
                     </div>
                     <div class="divider"></div>
@@ -151,7 +151,7 @@
                 <div class="plano">
                     <div class="planos-textos">
                         <p class="text-bold ouro">Plano Ouro</p>
-                        <p class="text-bold">R$ 150,00</p>
+                        <p class="text-bold">R$ 300,00</p>
                         <p class="text-min">Mensais</p>
                     </div>
                     <div class="divider"></div>
@@ -193,14 +193,17 @@
                 </form>
                 <button class="primary-btn">FALE COMIGO <span class="material-symbols-outlined">south_east</span></button>
                 <div id="plano-info">
+                    <h2 class="bronze-text text-bold bronze">Bronze</h2>
                     <p class="resizableText bronze-text">
                         Planilha de treino através do aplicativo TREINUS<br>Feedback e dúvidas via whatsapp<br>Ideal para quem utiliza frequência cardíaca.<br>Grupo Exclusivo com todos os alunos.
                     </p>
 
+                    <h2 class="prata-text text-bold prata hide">Prata</h2>
                     <p class="resizableText prata-text hide">
                         Ideal para quem utiliza Frequência cardíaca ou potênciaPlanilha de treino através do aplicativo Training Peaks Monitoramento de carga e sobrecarga Definição de ciclos com importância A, B ou C para eventos. Acompanhamento diário do treino, caso não realize o treino, contato via whatsapp para saber o motivo Acesso a todos os grupos da Assessoria É PÓDIO.
                     </p>
 
+                    <h2 class="ouro-text text-bold ouro hide">Ouro</h2>
                     <p class="resizableText ouro-text hide">
                         Ideal para quem quer conhecer o fantastico mundo dos MEDIDORES DE POTENCIA. Acompanhamento diário através de TRAINING PEAKS Análise minuciosa do treino passivel de feedback caso haja deformidade Planejamento e discussão sobre plano de carreira e definições profissionais Métricas do Training Peaks PREMIUM vão servir para analisar e projetar seu PICO DE PERFORMANCE, aumentando as chances de chegar 100% na prova ALVO. Indicação de livros/séries e documentários que vão te fazer TREINAR A MENTE, QUANDO NÃO PUDER TREINAR O CORPO.
                     </p>
