--- a/index.html
+++ b/index.html
@@ -161,17 +161,29 @@
             <div id="confirmação-planos">
                 <button class="primary-btn" onclick="openWhatsApp('Ola gostaria de mais informações sobre seu trabalho.')">FALE COMIGO <span class="material-symbols-outlined">south_east</span></button>
                 <div id="plano-info">
-                    <p class="resizableText bronze-text" >
-                        Planilha de treino através do aplicativo TREINUS Feedback e dúvidas via whatsapp Ideal para quem utiliza frequência cardíaca. Grupo Exclusivo com todos os alunos.
-                    </p>
+                    <ul class="bronze-text resizableText">
+                        <li>Planilha de treino através do aplicativo TREINUS.</li>
+                        <li>Feedback e dúvidas via whatsapp. &#128242</li>
+                        <li>Ideal para quem utiliza frequência cardíaca. ❤️</li>
+                        <li>Grupo Exclusivo com todos os alunos. 👨🏻‍🎓</li>
+                    </ul>
 
-                    <p class="resizableText prata-text hide">
-                        Ideal para quem utiliza Frequência cardíaca ou potênciaPlanilha de treino através do aplicativo Training Peaks Monitoramento de carga e sobrecarga Definição de ciclos com importância A, B ou C para eventos. Acompanhamento diário do treino, caso não realize o treino, contato via whatsapp para saber o motivo Acesso a todos os grupos da Assessoria É PÓDIO.
-                    </p>
+                    <ul class="resizableText prata-text hide">
+                        <li>Ideal para quem utiliza Frequência cardíaca ou potência. ❤️⚡</li>
+                        <li>Planilha de treino através do aplicativo Training Peaks.</li>
+                        <li>Monitoramento de carga e sobrecarga. 🏋🏻</li>
+                        <li>Definição de ciclos com importância A, B ou C para eventos. ⚠</li>
+                        <li>Acompanhamento diário do treino, caso não realize o treino, contato via whatsapp para saber o motivo. ✅</li>
+                        <li>Acesso a todos os grupos da Assessoria É PÓDIO. 🔝</li>
+                    </ul>
 
-                    <p class="resizableText ouro-text hide">
-                        Ideal para quem quer conhecer o fantastico mundo dos MEDIDORES DE POTENCIA. Acompanhamento diário através de TRAINING PEAKS Análise minuciosa do treino passivel de feedback caso haja deformidade Planejamento e discussão sobre plano de carreira e definições profissionais Métricas do Training Peaks PREMIUM vão servir para analisar e projetar seu PICO DE PERFORMANCE, aumentando as chances de chegar 100% na prova ALVO. Indicação de livros/séries e documentários que vão te fazer TREINAR A MENTE, QUANDO NÃO PUDER TREINAR O CORPO.
-                    </p>
+                    <ul class="resizableText ouro-text hide">
+                        <li>Ideal para quem quer conhecer o fantastico mundo dos MEDIDORES DE POTENCIA. ⚡</li>
+                        <li>Acompanhamento diário através de TRAINING PEAKS. ⌨</li>
+                        <li>Planejamento e discussão sobre plano de carreira e definições profissionais. 💭</li>
+                        <li>Métricas do Training Peaks PREMIUM vão servir para analisar e projetar seu PICO DE PERFORMANCE, aumentando as chances de chegar 100% na prova ALVO. 🎯</li>
+                        <li>Indicação de livros/séries e documentários que vão te fazer TREINAR A MENTE, QUANDO NÃO PUDER TREINAR O CORPO. 🧠</li>
+                    </ul>
                 </div>
             </div>
 
@@ -194,19 +206,31 @@
                 <button class="primary-btn">FALE COMIGO <span class="material-symbols-outlined">south_east</span></button>
                 <div id="plano-info">
                     <h2 class="bronze-text text-bold bronze">Bronze</h2>
-                    <p class="resizableText bronze-text">
-                        Planilha de treino através do aplicativo TREINUS<br>Feedback e dúvidas via whatsapp<br>Ideal para quem utiliza frequência cardíaca.<br>Grupo Exclusivo com todos os alunos.
-                    </p>
+                    <ul class="bronze-text resizableText">
+                        <li class="resizableText">Planilha de treino através do aplicativo TREINUS.</li>
+                        <li class="resizableText">Feedback e dúvidas via whatsapp. &#128242</li>
+                        <li class="resizableText">Ideal para quem utiliza frequência cardíaca. ❤️</li>
+                        <li class="resizableText">Grupo Exclusivo com todos os alunos. 👨🏻‍🎓</li>
+                    </ul>
 
                     <h2 class="prata-text text-bold prata hide">Prata</h2>
-                    <p class="resizableText prata-text hide">
-                        Ideal para quem utiliza Frequência cardíaca ou potênciaPlanilha de treino através do aplicativo Training Peaks Monitoramento de carga e sobrecarga Definição de ciclos com importância A, B ou C para eventos. Acompanhamento diário do treino, caso não realize o treino, contato via whatsapp para saber o motivo Acesso a todos os grupos da Assessoria É PÓDIO.
-                    </p>
+                    <ul class="resizableText prata-text hide">
+                        <li>Ideal para quem utiliza Frequência cardíaca ou potência. ❤️⚡</li>
+                        <li>Planilha de treino através do aplicativo Training Peaks.</li>
+                        <li>Monitoramento de carga e sobrecarga. 🏋🏻</li>
+                        <li>Definição de ciclos com importância A, B ou C para eventos. ⚠</li>
+                        <li>Acompanhamento diário do treino, caso não realize o treino, contato via whatsapp para saber o motivo. ✅</li>
+                        <li>Acesso a todos os grupos da Assessoria É PÓDIO. 🔝</li>
+                    </ul>
 
                     <h2 class="ouro-text text-bold ouro hide">Ouro</h2>
-                    <p class="resizableText ouro-text hide">
-                        Ideal para quem quer conhecer o fantastico mundo dos MEDIDORES DE POTENCIA. Acompanhamento diário através de TRAINING PEAKS Análise minuciosa do treino passivel de feedback caso haja deformidade Planejamento e discussão sobre plano de carreira e definições profissionais Métricas do Training Peaks PREMIUM vão servir para analisar e projetar seu PICO DE PERFORMANCE, aumentando as chances de chegar 100% na prova ALVO. Indicação de livros/séries e documentários que vão te fazer TREINAR A MENTE, QUANDO NÃO PUDER TREINAR O CORPO.
-                    </p>
+                    <ul class="resizableText ouro-text hide">
+                        <li>Ideal para quem quer conhecer o fantastico mundo dos MEDIDORES DE POTENCIA. ⚡</li>
+                        <li>Acompanhamento diário através de TRAINING PEAKS. ⌨</li>
+                        <li>Planejamento e discussão sobre plano de carreira e definições profissionais. 💭</li>
+                        <li>Métricas do Training Peaks PREMIUM vão servir para analisar e projetar seu PICO DE PERFORMANCE, aumentando as chances de chegar 100% na prova ALVO. 🎯</li>
+                        <li>Indicação de livros/séries e documentários que vão te fazer TREINAR A MENTE, QUANDO NÃO PUDER TREINAR O CORPO. 🧠</li>
+                    </ul>
                 </div>
             </div>
         </section>
