--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <span class="text-bold">Sou Jessé Silva, atleta,  treinador <br>de CICLISMO/MTB,</span>
                         narrador de <br>
                         provas, apresentador e <br>
-                        apaixonado pela complexidades do <br>
+                        apaixonado pelas complexidades do <br>
                         alto rendimento. <br>
                         Desde o berço a bicicleta foi <br>
                         presente em minha vida e por <br>
