--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                         Com tanto tempo assim dedicado ao <br>
                         conhecimento empírico (prático) só <br>
                         me faltava o conhecimento <br>
-                        teórico, foi quando entrei na <br>
-                        faculdade de Educação Física e me <br>
+                        teórico, foi quando iniciei a<br>
+                        graduação de Educação Física e me <br>
                         aprofundei nas variáveis do corpo <br>
                         humano e o que precisava de fato <br>
                         para poder performar.
@@ -114,7 +114,7 @@
                     </picture>
                     <p>
                         <span class="text-bold">Aqui posso te explicar um pouco de <br class="br-mob"> como posso te ajudar a evoluir:</span><br class="br-mob"><br class="br-desk">
-                        Te ofereço um treino <br class="br-mob"> INDIVIDUALIZADO E ESPECIFICO PRA <br class="br-mob"> CADA ATLETA. <br class="br-mob"> <br class="br-desk">
+                        Te ofereço um treino <br class="br-mob"> INDIVIDUALIZADO E ESPECÍFICO PRA <br class="br-mob"> CADA ATLETA. <br class="br-mob"> <br class="br-desk">
                         O treino é prescrito semanalmente <br class="br-mob"> e o o contato com o treinador <br class="br-desk"> é <br class="br-mob"> diário. <br class="br-mob"> <br class="br-desk">
                         <span class="text-bold">Trabalhamos com o Treinus, <br class="br-mob"> Training Peaks, Strava. <br class="br-mob"> <br class="br-desk"></span>
                         Contato através do Whatsapp com <br class="br-mob"> o próprio treinador <br class="br-mob"> <br class="br-desk">
