--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <span class="name">Ouro</span>
                     </label>
                 </form>
-                <button class="primary-btn">FALE COMIGO <span class="material-symbols-outlined">south_east</span></button>
+                <button class="primary-btn" onclick="openWhatsApp('Ola gostaria de mais informações sobre seu trabalho.')">FALE COMIGO <span class="material-symbols-outlined">south_east</span></button>
                 <div id="plano-info">
                     <h2 class="bronze-text text-bold bronze">Bronze</h2>
                     <ul class="bronze-text resizableText">
