--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         estando em todos os pódios possíveis na categoria ELITE e também<br>
                         na categoria GERAL.
                         <br>
-                        <span class="text-bold">Já estive aí onde você quer chegar,</span> é simples, complexo, requer<br> dedicação e tempo, além de MUITA, MAS MUITA fome de conseguir conquistar.<br>
+                        <span class="text-bold">Já estive aí onde você quer chegar,</span> é simples, complexo, requer<br> dedicação e tempo, além de MUITA, MAIS MUITA fome de querer conquistar.<br>
                         É sobre isso. O pódio não escolhe quem sobe nele, mas sobe quem o faz por merecer.<br>
                         Pódio é MERECIMENTO e eu vou te fazer MERECER tua vaga no pódio.
                     </p>
@@ -113,7 +113,7 @@
                         <img src="img/form01-mobile.png" alt="s5-middle-form">
                     </picture>
                     <p>
-                        <span class="text-bold">Aqui posso te explicar um pouco de <br class="br-mob"> como posso te ajudar a evoluir:</span><br class="br-mob"><br class="br-desk">
+                        <span class="text-bold">Aqui te explico <br class="br-mob"> como posso te ajudar a evoluir:</span><br class="br-mob"><br class="br-desk">
                         Te ofereço um treino <br class="br-mob"> INDIVIDUALIZADO E ESPECÍFICO PRA <br class="br-mob"> CADA ATLETA. <br class="br-mob"> <br class="br-desk">
                         O treino é prescrito semanalmente <br class="br-mob"> e o o contato com o treinador <br class="br-desk"> é <br class="br-mob"> diário. <br class="br-mob"> <br class="br-desk">
                         <span class="text-bold">Trabalhamos com o Treinus, <br class="br-mob"> Training Peaks, Strava. <br class="br-mob"> <br class="br-desk"></span>
