--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 </form>
                 <button class="primary-btn" onclick="openWhatsApp('Ola gostaria de mais informações sobre seu trabalho.')">FALE COMIGO <span class="material-symbols-outlined">south_east</span></button>
                 <div id="plano-info">
-                    <h2 class="bronze-text text-bold bronze">Bronze</h2>
+                    <h2 class="bronze-text"><div><span class="bronze">Bronze</span><p class="text-bold">R$ 150,00</p></div></h2>
                     <ul class="bronze-text resizableText">
                         <li class="resizableText">Planilha de treino através do aplicativo TREINUS.</li>
                         <li class="resizableText">Feedback e dúvidas via whatsapp. &#128242</li>
@@ -214,7 +214,7 @@
                         <li class="resizableText">Grupo Exclusivo com todos os alunos. 👨🏻‍🎓</li>
                     </ul>
 
-                    <h2 class="prata-text text-bold prata hide">Prata</h2>
+                    <h2 class="prata-text hide"><div><span class="prata">Prata</span><p class="text-bold">R$ 220,00</p></div></h2>
                     <ul class="resizableText prata-text hide">
                         <li>Ideal para quem utiliza Frequência cardíaca ou potência. ❤️⚡</li>
                         <li>Planilha de treino através do aplicativo Training Peaks.</li>
@@ -224,7 +224,7 @@
                         <li>Acesso a todos os grupos da Assessoria É PÓDIO. 🔝</li>
                     </ul>
 
-                    <h2 class="ouro-text text-bold ouro hide">Ouro</h2>
+                    <h2 class="ouro-text hide"><div><span class="ouro">Ouro</span><p class="text-bold">R$ 300,00</p></div></h2>
                     <ul class="resizableText ouro-text hide">
                         <li>Ideal para quem quer conhecer o fantastico mundo dos MEDIDORES DE POTENCIA. ⚡</li>
                         <li>Acompanhamento diário através de TRAINING PEAKS. ⌨</li>
