--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <p class="text-min">Mensais</p>
                     </div>
                     <div class="divider"></div>
-                    <button onclick="switchText('bronze')"><p class="text-bold">Saiba Mais</p></button>
+                    <button onclick="switchText('bronze')" id="bronze-btn"><p class="text-bold">Saiba Mais</p></button>
                 </div>
                 <div class="plano">
                     <div class="planos-textos">
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <div id="confirmação-planos">
-                <button class="primary-btn" onclick="openWhatsApp('Ola gostaria de mais informações sobre seu trabalho.')">FALE COMIGO <span class="material-symbols-outlined">south_east</span></button>
+                <button class="primary-btn confirm-btn" onclick="openWhatsApp('Ola gostaria de mais informações sobre seu trabalho.')">CONFIRMAR ASSINATURA<span class="material-symbols-outlined">south_east</span></button>
                 <div id="plano-info">
                     <ul class="bronze-text resizableText">
                         <li>Planilha de treino através do aplicativo TREINUS.</li>
